--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "node server-with-postgre.js",
     "dev": "nodemon app.js"
   },
   "keywords": [
@@ -17,6 +17,9 @@
   "dependencies": {
     "cors": "2.8.5",
     "express": "4.18.2",
+    "mongodb": "6.3.0",
+    "pg": "^8.11.3",
+    "pg-promise": "^11.5.4",
     "zod": "3.22.4"
   },
   "devDependencies": {
